Material styling updates

--- a/sass/material-card.scss
+++ b/sass/material-card.scss
@@ -53,7 +53,7 @@ $lr-padding: 24px;
     height: 52px;
     margin: 0 (-$lr-padding) (-$tb-padding) (-$lr-padding);
 }
-
+/*
 .material.card .card-action {
     height: 36px;
     margin: 8px;
@@ -84,7 +84,7 @@ $lr-padding: 24px;
 
 .material.card .primary:hover {
     background: rgba($color-primary, .12);
-}
+}*/
 
 
 // Extra Small Devices, Phones 
