--- a/styles/stream.css
+++ b/styles/stream.css
@@ -1,3 +1,4 @@
+/* line 6, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream {
   width: 100%;
   position: absolute;
@@ -14,26 +15,31 @@
   background: transparent;
 }
 
+/* line 22, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream .card:last-child {
   border-radius: 0 0 2px 2px;
 }
 
+/* line 28, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #article-stream {
   top: 0px;
 }
 
+/* line 36, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
+/* line 41, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
   border-top-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
+/* line 47, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream-action {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -51,6 +57,7 @@
   background-color: #009688;
 }
 
+/* line 61, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream-action .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
@@ -59,11 +66,13 @@
   box-shadow: none;
 }
 
+/* line 69, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active {
   color: #fff;
 }
 
+/* line 74, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active,
 .stream-action .btn-primary:focus,
@@ -78,10 +87,12 @@
   box-shadow: none;
 }
 
+/* line 89, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .stream-action .btn {
   height: 100%;
 }
 
+/* line 96, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .fluid-container {
   width: auto;
   position: absolute;
@@ -96,6 +107,7 @@
   display: inline-block;
 }
 
+/* line 117, /Users/scott/Documents/work/conduit/sass/stream.scss */
 .book {
   width: auto;
   top: 90px;
@@ -105,6 +117,7 @@
   float: right;
 }
 
+/* line 129, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -122,12 +135,14 @@
   z-index: 100;
 }
 
+/* line 142, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
+/* line 148, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary:active,
 #book-action-wrapper .btn-primary.active,
 #book-action-wrapper .btn-primary:focus,
@@ -142,6 +157,7 @@
   box-shadow: none;
 }
 
+/* line 162, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper .nya-bs-select {
   position: absolute;
   left: 0;
@@ -153,6 +169,7 @@
   box-shadow: none;
 }
 
+/* line 174, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper nya-bs-select:active,
 #book-action-wrapper nya-bs-select.active,
 #book-action-wrapper nya-bs-select:focus,
@@ -167,6 +184,7 @@
   box-shadow: none;
 }
 
+/* line 188, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper .stream-action {
   position: absolute;
   width: 48px;
@@ -179,6 +197,7 @@
   box-shadow: none;
 }
 
+/* line 200, /Users/scott/Documents/work/conduit/sass/stream.scss */
 #book-action-wrapper #team-info {
   background: #757575 !important;
   position: relative;
@@ -192,3 +211,5 @@
   font-size: 12px;
   line-height: 24px;
 }
+
+/*# sourceMappingURL=../styles/stream.map */
