--- a/sass/material-form.scss
+++ b/sass/material-form.scss
@@ -9,6 +9,9 @@ $input-font-size: 16px;
 $label-font-size: 12px;
 $label-margin-bottom: 12px;
 
+$input-spacing-padding-top: $label-font-size + $label-margin-bottom;
+$input-spacing-margin-bottom: 8px;
+
 .material-form .dropdown-toggle {
     width: 100%;
 
@@ -17,6 +20,7 @@ $label-margin-bottom: 12px;
     .caret {
         float: right;
         margin-top: 8px;
+        margin-right: 8px;
     }
 }
 
@@ -41,7 +45,10 @@ $label-margin-bottom: 12px;
 .material-form .dropdown {
     padding-right: 0;
     padding-left: 0;
-    border-radius: 2px;
+    border-radius: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
 
     .item-selected {
         color: $color-font;
@@ -61,24 +68,25 @@ $label-margin-bottom: 12px;
 }
 
 .material-form .dropdown-menu {
-    right: 0;
-    left: 0;
+    right: -4px;
+    left: -4px;
+    top: 0;
     border-radius: 2px;
 }
 
 .material-form  .btn,
-                .btn:active,
-                .btn:hover,
-                .btn:focus,
-                .btn-primary,
-                .btn-primary:active,
-                .btn-primary:hover,
-                .btn-primary:focus,
-                .btn-primary:active:hover,
-                .btn-primary:active.focus,
-                .open>.dropdown-toggle.btn-primary,
-                .open>.dropdown-toggle.btn-primary:hover,
-                .open>.dropdown-toggle.btn-primary:focus {
+.material-form  .btn:active,
+.material-form  .btn:hover,
+.material-form  .btn:focus,
+.material-form  .btn-primary,
+.material-form  .btn-primary:active,
+.material-form  .btn-primary:hover,
+.material-form  .btn-primary:focus,
+.material-form  .btn-primary:active:hover,
+.material-form  .btn-primary:active.focus,
+.material-form  .open>.dropdown-toggle.btn-primary,
+.material-form  .open>.dropdown-toggle.btn-primary:hover,
+.material-form  .open>.dropdown-toggle.btn-primary:focus {
     background: transparent;
     color: $color-font;
     border: none;
@@ -86,32 +94,37 @@ $label-margin-bottom: 12px;
 
     font-size: $input-font-size;
 
-    height: $input-font-size + $input-padding-bottom;
+    height: $input-font-size + $input-padding-bottom + 4;
     margin: 0 0 $input-margin-bottom 0;
-    padding: 0 0 $input-padding-bottom 0;
+    padding: 0 0 ($input-padding-bottom + 4) 0;
 
 }
 
-.material-form.form-group .form-control {
+.material-form.form-group input {
     border: none;
     border-bottom: 	1px solid $color-grey;
     border-radius: 0;
     box-shadow: none;
+    outline: none;
 
     font-size: $input-font-size;
 
     height: $input-font-size + $input-padding-bottom;
     margin: 0 0 $input-margin-bottom 0;
     padding: 0 0 $input-padding-bottom 0;
+
+    width: 100%;
 }
 
-.material-form.form-group .text-field {
+.material-form.form-group .material-input-field {
     margin-right: $card-padding;
     margin-left: $card-padding;
-    margin-bottom: 16px;
+    margin-bottom: $input-spacing-margin-bottom;;
 
     position: relative;
-    padding-top: $label-margin-bottom + $label-font-size;
+    padding-top: $input-spacing-padding-top;
+
+    height: $input-spacing-padding-top + $input-font-size + $input-padding-bottom + $input-margin-bottom + $input-spacing-margin-bottom;
 
     input:active,
     input:focus {
@@ -120,7 +133,7 @@ $label-margin-bottom: 12px;
     }
 }
 
-.text-field label {
+.material-input-field label {
     position: absolute;
     left: 0;
     top: $label-margin-bottom + $label-font-size;
@@ -133,7 +146,7 @@ $label-margin-bottom: 12px;
     pointer-events: none;     
 }
 
-.text-field label.with-text,
+.material-input-field label.with-text,
 .dropdown-label,
 .dropdown-label.with-text {
     height: $label-font-size;
@@ -153,10 +166,13 @@ $label-margin-bottom: 12px;
     visibility: visible;
 }
 
-.text-field input:active + label,
-.text-field input:focus + label,
-.text-field button:active + label,
-.text-field button:focus + label, {
+.material-input-field input:active + label,
+.material-input-field input:focus + label,
+.material-input-field button:active + label,
+.material-input-field button:focus + label,
+.material-form .dropdown-toggle.btn:active + label,
+.material-form .dropdown-toggle.btn:focus + label,
+.material-form .dropdown.open + label {
     color: $color-primary;
     height: $label-font-size;
     font-size: $label-font-size;
@@ -167,12 +183,16 @@ $label-margin-bottom: 12px;
     transition: all .25s ease-in-out;
 }
 
-.hide {
+.material-form label.hide {
     opacity: 0;
     transition: opacity .25s linear;
 }
 
-.fade-in {
+.material-form label.fade-in {
     opacity: 1;
     transition: opacity .25s linear;
+}
+
+label.active {
+    color: $color-primary;
 }
