--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,14 +1,17 @@
+/* line 13, /Users/scott/Documents/work/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 19, /Users/scott/Documents/work/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
+/* line 24, /Users/scott/Documents/work/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   position: fixed;
@@ -24,6 +27,7 @@ body {
   background-color: #f2f2f2;
 }
 
+/* line 42, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -34,6 +38,7 @@ body {
   background: transparent;
 }
 
+/* line 52, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -41,6 +46,7 @@ body {
   background: inherit;
 }
 
+/* line 59, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #center {
   padding: 0;
   width: 55vw;
@@ -48,6 +54,7 @@ body {
   float: left;
 }
 
+/* line 66, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   padding: 0;
@@ -58,6 +65,7 @@ body {
   display: inline-block;
 }
 
+/* line 77, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   padding: 0;
@@ -69,6 +77,7 @@ body {
   overflow-x: visible;
 }
 
+/* line 88, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #header {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -85,6 +94,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+/* line 106, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -93,6 +103,7 @@ body {
   margin-right: -0.25em;
 }
 
+/* line 114, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -101,23 +112,28 @@ body {
   text-align: center;
 }
 
+/* line 122, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
+/* line 127, /Users/scott/Documents/work/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
 }
 
+/* line 131, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .caret {
   visibility: hidden;
 }
 
+/* line 135, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .special-title {
   visibility: hidden;
 }
 
+/* line 139, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:after {
   font-family: 'Glyphicons Halflings';
   content: '\e236';
@@ -128,6 +144,7 @@ body {
   top: 3px;
 }
 
+/* line 150, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   left: 10px;
@@ -142,17 +159,20 @@ body {
   border: none;
 }
 
+/* line 164, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #007d71;
 }
 
+/* line 171, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:active,
 #menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #00635a;
 }
 
+/* line 177, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .dropdown-menu.open {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -172,11 +192,13 @@ body {
   z-index: 101;
 }
 
+/* line 193, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #menu .dropdown-menu > li > div {
   padding: 3px 20px;
   color: #bdbdbd;
 }
 
+/* line 198, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #header-content-wrapper .form-control {
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -186,7 +208,10 @@ body {
   background-color: transparent;
 }
 
+/* line 207, /Users/scott/Documents/work/conduit/sass/layout.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
 }
+
+/*# sourceMappingURL=../styles/layout.map */
