--- a/styles/material-card.css
+++ b/styles/material-card.css
@@ -1,9 +1,11 @@
+/* line 4, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 10, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 body.material {
   position: fixed;
   left: 0;
@@ -18,6 +20,7 @@ body.material {
   background-color: #f2f2f2;
 }
 
+/* line 29, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 .material.card {
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -31,55 +34,58 @@ body.material {
   background: #fff;
 }
 
+/* line 42, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 .material.card .primary-title {
   font-size: 24px;
   padding-bottom: 16px;
 }
 
+/* line 47, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 .material.card .supporting-text {
   font-size: 14px;
   padding-bottom: 16px;
 }
 
+/* line 52, /Users/scott/Documents/work/conduit/sass/material-card.scss */
 .material.card .action-area {
   height: 52px;
   margin: 0 -24px -24px -24px;
 }
 
+/*
 .material.card .card-action {
-  height: 36px;
-  margin: 8px;
-  font-size: 14px;
-  padding: 9px 16px;
-  background: transparent;
-  border: none;
-  border-radius: 2px !important;
-  float: right;
-  font-weight: 500;
-  text-decoration: none;
+    height: 36px;
+    margin: 8px;
+    font-size: 14px;
+    padding: 9px 16px;
+    background: transparent;
+    border: none;
+    border-radius: 2px !important;
+    float: right;
+    font-weight: 500;
+    text-decoration: none;
 }
-
 .material.card .card-action:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .material.card .default {
-  color: #212121;
+    color: $color-font;
 }
 
 .material.card .default:hover {
-  background: rgba(33, 33, 33, 0.12);
+    background: rgba($color-font, .12);
 }
 
 .material.card .primary {
-  color: #009688;
+    color: $color-primary;
 }
 
 .material.card .primary:hover {
-  background: rgba(0, 150, 136, 0.12);
-}
-
+    background: rgba($color-primary, .12);
+}*/
 @media only screen and (min-width: 480px) {
+  /* line 92, /Users/scott/Documents/work/conduit/sass/material-card.scss */
   .material.card {
     width: 80vw;
     margin-left: 10vw;
@@ -87,6 +93,7 @@ body.material {
 }
 
 @media only screen and (min-width: 768px) {
+  /* line 100, /Users/scott/Documents/work/conduit/sass/material-card.scss */
   .material.card {
     width: 60vw;
     margin-left: 20vw;
@@ -94,6 +101,7 @@ body.material {
 }
 
 @media only screen and (min-width: 992px) {
+  /* line 108, /Users/scott/Documents/work/conduit/sass/material-card.scss */
   .material.card {
     width: 50vw;
     margin-left: 25vw;
@@ -101,6 +109,7 @@ body.material {
 }
 
 @media only screen and (min-width: 1200px) {
+  /* line 116, /Users/scott/Documents/work/conduit/sass/material-card.scss */
   .material.card {
     width: 30vw;
     margin-left: 35vw;
@@ -108,8 +117,11 @@ body.material {
 }
 
 @media only screen and (min-width: 1600px) {
+  /* line 124, /Users/scott/Documents/work/conduit/sass/material-card.scss */
   .material.card {
     width: 20vw;
     margin-left: 40vw;
   }
 }
+
+/*# sourceMappingURL=../styles/material-card.map */
