--- a/styles/media.css
+++ b/styles/media.css
@@ -1,16 +1,20 @@
+/* line 1, /Users/scott/Documents/work/conduit/sass/media.scss */
 .ico-text-1 {
   display: inline;
 }
 
+/* line 4, /Users/scott/Documents/work/conduit/sass/media.scss */
 .ico-text-2 {
   display: inline;
 }
 
+/* line 7, /Users/scott/Documents/work/conduit/sass/media.scss */
 .ico-text-3 {
   display: inline;
 }
 
 @media screen and (max-width: 1200px) {
+  /* line 12, /Users/scott/Documents/work/conduit/sass/media.scss */
   .ico-text-1 {
     display: none;
     visibility: hidden;
@@ -18,6 +22,7 @@
 }
 
 @media screen and (max-width: 1100px) {
+  /* line 19, /Users/scott/Documents/work/conduit/sass/media.scss */
   .ico-text-2 {
     display: none;
     visibility: hidden;
@@ -25,33 +30,42 @@
 }
 
 @media screen and (max-width: 800px) {
+  /* line 26, /Users/scott/Documents/work/conduit/sass/media.scss */
   .ico-text-3 {
     display: none;
     visibility: hidden;
   }
+  /* line 31, /Users/scott/Documents/work/conduit/sass/media.scss */
   .panel-title {
     text-align: center;
   }
+  /* line 36, /Users/scott/Documents/work/conduit/sass/media.scss */
   .toolbox .nya-bs-select {
     width: 42px;
   }
+  /* line 38, /Users/scott/Documents/work/conduit/sass/media.scss */
   .toolbox .nya-bs-select .dropdown-toggle {
     height: 36px;
   }
+  /* line 41, /Users/scott/Documents/work/conduit/sass/media.scss */
   .toolbox .nya-bs-select .caret {
     display: none;
     visibility: hidden;
   }
+  /* line 48, /Users/scott/Documents/work/conduit/sass/media.scss */
   .nya-bs-select {
     text-align: center;
   }
+  /* line 50, /Users/scott/Documents/work/conduit/sass/media.scss */
   .nya-bs-select .dropdown-toggle {
     padding-right: 0;
   }
+  /* line 53, /Users/scott/Documents/work/conduit/sass/media.scss */
   .nya-bs-select .special-title, .nya-bs-select .filter-option {
     display: none;
     visibility: hidden;
   }
+  /* line 59, /Users/scott/Documents/work/conduit/sass/media.scss */
   .special-title:before, .filter-option:before {
     visibility: visible;
     display: inline;
@@ -61,3 +75,5 @@
     content: '\e043';
   }
 }
+
+/*# sourceMappingURL=../styles/media.map */
