--- a/sass/material-card.scss
+++ b/sass/material-card.scss
@@ -46,6 +46,7 @@ $lr-padding: 24px;
 
 .material.card .supporting-text {
     font-size: 14px;
+    line-height: 20px;
     padding-bottom: 16px;
 }
 
