--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -56,6 +56,7 @@
                                 ng-click="getMostRecentEdit()">
                                 View Latest Edit&nbsp;&nbsp;<span class="glyphicon glyphicon-fast-forward pull-right"></span>
                             </a>
+                            <!--VERSIONS VIEW DISABLED
                             <a  href="#"
                                 ng-show="hasEdits() && !versionsView()"
                                 ng-click="versionsView(true)">
@@ -64,10 +65,13 @@
                             <a href"#" target="_blank" ng-click="articleEdit.$show()">
                                 Edit&nbsp;&nbsp;<span class="glyphicon glyphicon-pencil pull-right"></span>
                             </a>
+                            -->
+                            <!--
                             <a  href="#"
                                 ng-click="export(articles[currentIndex])">
                                 Export&nbsp;&nbsp;<span class="glyphicon glyphicon-save-file pull-right"></span>
                             </a>
+                        -->
                         </li>
                     </ol>   
 
@@ -212,6 +216,11 @@
                                     DISCUSS<span ng-if="articles[currentIndex].comments.length > 0" class="badge" style="margin-left:4px">{{articles[currentIndex].comments.length}}</span>
                                 </div>
                         </button>
+                        <button class="btn btn-default"
+                                ng-click="export(articles[currentIndex])"
+                                title="EXPORT">
+                                <div class="ico-text-1">EXPORT</div>
+                            </a>
                     </div>
                     <!-- In edit view -->
                     <div id="edit-action-buttons" ng-show="articleEdit.$visible">
